--- a/Nostalgia/LookBack-Info.plist
+++ b/Nostalgia/LookBack-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.placeholder.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.olgiquendro.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
